# sqs_listener

./: CHANGELOG.md  Cargo.toml  README.md
examples/: simple.rs  with_creds.rs
src/: client.rs  lib.rs
