[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
description = "An easy to use listener, to listen for messages from SQS queues"
documentation = "https://docs.rs/sqs_listener"
edition = "2018"
homepage = "https://github.com/avencera/sqs_listener"
license = "Apache-2.0"
name = "sqs_listener"
repository = "https://github.com/avencera/sqs_listener"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async
async-trait = "0.1"
tokio = {version = "1.8", features = ["rt-multi-thread", "sync"]}

# actor framework
act-zero = {version = "0.4", features = ["default-tokio"]}

# error handling
thiserror = "1.0"

# serde
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# logging
log = {version = "0.4", features = ["serde"]}

# utils
derive_builder = "0.10"

# aws sqs
rusoto_core = "0.47.0"
rusoto_sqs = "0.47.0"

# for examples
[dev-dependencies]
color-eyre = "0.5"
env_logger = "0.9"
eyre = "0.6"
tokio = {version = "1.1", features = ["rt-multi-thread", "macros", "sync"]}
